k8s/homework-2/dp-testwebapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: testwebapp
spec:
    replicas: 4
    selector:
        matchLabels:
            env: prod
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                env: prod
        spec:
            containers:
              - name: testwebapp
                image: zhukoffg/testwebapp:1.0
                ports:
                - containerPort: 8080
                resources:
                  limits:
                    memory: 512Mi
                    cpu: "1"
                  requests:
                    memory: 256Mi
                    cpu: "0.2"
