k8s/homework-2/svc-testwebapp.yml
apiVersion: v1
kind: Service
metadata:
  name: testwebapp
spec:
  type: ClusterIP
  selector:
    env: prod
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
