k8s/homework-2/ing-testwebapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: testwebapp
            port:
              number: 80
